<resources>
    <string name="app_name">Wease</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <!--facebk strings-->
    <string name="facebook_app_id">871582562998266</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="purchase_items">Modules</string>
    <string name="send">Mail us</string>
    <string name="special_purchase">Achat spécial</string>
    <string name="mon_panier">Mes Options</string>
    <string name="communication">Communications</string>
    <string name="Autre_commande">Commande particulière</string>
    <string name="listes_de_modules">Modules disponibles</string>
    <string name="Options_disponibles">Options Disponibles</string>
    <string name="prix">Prix : </string>
    <string name="wease">wease</string>
    <string name="noconnection">vérifier votre connection internet</string>
    <string name="Math">Maths</string>
    <string name="cult">Culture Général</string>
    <string name="CoursOption">Cours d\'option</string>
    <string name="Sciences">Sciences</string>
    <string name="Langue">Langue</string>
    <string name="Options">Options</string>
    <string name="wease_email">weaserdc@gmail.com</string>
    <string name="wease_slogan">Se former, c\'est avancer.</string>

    <!--facebk strings-->

    <!--onboarding -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Wease out of a failure!</string>
    <string name="slide_1_desc">Prepare for your upcoming exams!</string>

    <string name="slide_2_title">Move forward</string>
    <string name="slide_2_desc">your determination defines your results!</string>

    <string name="slide_3_title">Great courage</string>
    <string name="slide_3_desc">Don\'t stop until you\'re proud!</string>
    <string name="logo_app">logo Application</string>
    <string name="Click_Here_To_Sign_Out">Click Here To Sign Out</string>
    <string name="Mes_Modules">Mes Modules</string>
    <string name="backToExitt">Appuyez encore sur Retour pour quitter</string>
    <string name="default_notification_channel_id">40</string>
    <string name="share">Partagez</string>
    <string name="deviceNotOnline">Vérifiez votre connexion</string>


    <!--courses strings-->
    <string name="math_physique">Math-Physique</string>
    <string name="Bio_Chimie">Bio-Chimie</string>
    <string name="Litteraire">Littéraire</string>
    <string name="Commerciale_Admi">Commerciale Admi</string>
    <string name="Humanite_Pedagogique">Humanité Pédagogique</string>
    <string name="Sociale">Sociale</string>
    <string name="Construction">Construction</string>
    <string name="Agriculture">Agriculture générale</string>
    <string name="Commerciale_info">Commerciale informatique</string>
    <string name="Construction_metallique">Construction métallique</string>
    <string name="Electricite">Electricité</string>
    <string name="Eléctronique">Eléctronique industrielle</string>
    <string name="Coupe_et_couture">Coupe et couture</string>
    <string name="Industries_agricoles">Industries agricoles</string>
    <string name="Informatique_de_gestion">Informatique de gestion</string>
    <string name="Menuiserie">Menuiserie</string>
    <string name="Mecanique_generale">Mécanique générale</string>
    <string name="Mecanique_machines_et_outils">Mécanique Machines et outils</string>
    <string name="mines_et_geologie">Mines et géologie</string>
    <string name="musique">Musique</string>
    <string name="nutrition">Nutrition</string>
    <string name="peche_et_navigation">Pêche et navigation</string>
    <string name="petrochimie">Pétrochimie</string>
    <string name="veterinairie">Vétérinaire</string>
    <string name="chimie_industrielle">Chimie industrielle</string>
    <string name="appwidget_text">Options Disponibles</string>
    <string name="add_widget">Add widget</string>


</resources>
