<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pada_cours_options"
        android:orderInCategory="100"
        android:title="@string/CoursOption" />
    <item
        android:id="@+id/action_pada_sciences"
        android:orderInCategory="100"
        android:title="@string/Sciences"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_padae_culture"
        android:orderInCategory="100"
        android:title="@string/cult"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pada_Langue"
        android:orderInCategory="100"
        android:title="@string/Langue"
        app:showAsAction="never" />

</menu>